--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
                     </div>
                 </div>
             </div>
+            <div class="download-cv">
+                <button class="button-primary">Download CV</button>
+            </div>
         </section>
         
     </main>
