--- a/index.html
+++ b/index.html
@@ -156,7 +156,13 @@
              </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Let's Message me</h3>           
+            <h3 class="section-title">Let's Message me</h3> 
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="email" name="" placeholder="Your email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="button-primary" type="submit" value="Submit">
+            </form>          
         </div>
     </footer>
 </body>
