--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/f5e6d2022c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,8 +26,8 @@
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="button-primary">Download CV</button>
-                <button class="button-primary">Contact</button>
+                <button class="button-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="button-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="./images/hardy.png" alt="">
         </div>
@@ -140,7 +142,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="button-primary">Download CV</button>
+                <button class="button-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         
